@@ -53,9 +53,7 @@ the classes used by Rules; RmReduction does not depend on any other class).
        Parser           |              |           |                   
          |              +--------------+-----------+    
          |                             |                     
-         |                           State      Support
-         |                             |           |
-         |                             +-----------+
+         |                           State
          |                             |
          |                           Writer
          |                             |
