@@ -1,3 +1,0 @@
-#include "support.h"
-
-using namespace FBB;
