@@ -1,8 +1,0 @@
-#include "support.ih"
-
-void Support::vline() const
-{
-    vline(nColumns());
-    out() << "\n";
-}
-
