@@ -4,6 +4,7 @@
 
 #include <bobcat/fnwrap1c>
 #include <bobcat/align>
+#include <bobcat/tablesupport>
 
 #include "../om/om.h"
 #include "../symbol/symbol.h"
